--- a/source/index.html
+++ b/source/index.html
@@ -16,15 +16,11 @@
       <nav class="page-header__main-nav main-nav">
         <h2 class="visually-hidden">Навигация</h2>
         <div class="main-nav__logo-wrapper">
-          <a class="header-logo" aria-label="Логотип Pink">
-            <svg class="header-logo__image header-logo__image--mobile" width="74" height="23">
-              <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
-            </svg>
-            <svg class="header-logo__image header-logo__image--tablet" width="146" height="40">
-              <use xlink:href="img/sprite.svg#logo-pink-white-tablet"></use>
-            </svg>
-            <svg class="header-logo__image header-logo__image--desktop" width="146" height="40">
-              <use xlink:href="img/sprite.svg#logo-pink-white-desktop"></use>
+          <a class="header-logo" href="index.html" aria-label="Логотип Pink">
+            <svg class="header-logo__image" width="74" height="23">
+              <use class="header-logo__image--mobile" xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
+              <use class="header-logo__image--tablet" xlink:href="img/sprite.svg#logo-pink-white-tablet"></use>
+              <use class="header-logo__image--desktop" xlink:href="img/sprite.svg#logo-pink-white-desktop"></use>
             </svg>
           </a>
 
