--- a/source/form.html
+++ b/source/form.html
@@ -17,16 +17,13 @@
         <h2 class="visually-hidden">Навигация</h2>
         <div class="main-nav__logo-wrapper">
           <a class="header-logo" href="index.html" aria-label="Логотип Pink">
-            <svg class="header-logo__image header-logo__image--mobile" width="74" height="23">
-              <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
-            </svg>
-            <svg class="header-logo__image header-logo__image--tablet" width="146" height="40">
-              <use xlink:href="img/sprite.svg#logo-pink-white-tablet"></use>
-            </svg>
-            <svg class="header-logo__image header-logo__image--desktop" width="146" height="40">
-              <use xlink:href="img/sprite.svg#logo-pink-white-desktop"></use>
+            <svg class="header-logo__image" width="74" height="23">
+              <use class="header-logo__image--mobile" xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
+              <use class="header-logo__image--tablet" xlink:href="img/sprite.svg#logo-pink-white-tablet"></use>
+              <use class="header-logo__image--desktop" xlink:href="img/sprite.svg#logo-pink-white-desktop"></use>
             </svg>
           </a>
+
 
           <button class="main-nav__toggle" type="button" id="toggle-button" aria-label="Меню"></button>
         </div>
@@ -65,17 +62,17 @@
           <ul class="form-feedback__list">
             <li class="form-feedback__name-item">
               <label class="form-feedback__label" for="lastname">Фамилия:</label>
-              <input class="form-feedback__input" type="text" id="lastname" name="lastname"
+              <input class="form-feedback__input" type="text hidden" id="lastname" name="lastname"
                 placeholder="Укажите фамилию *" required>
             </li>
             <li class="form-feedback__name-item">
               <label class="form-feedback__label" for="firstname">Имя:</label>
-              <input class="form-feedback__input" type="text" id="firstname" name="firstname"
+              <input class="form-feedback__input" type="text hidden" id="firstname" name="firstname"
                 placeholder="Введите ваше имя *" required>
             </li>
             <li class="form-feedback__name-item">
               <label class="form-feedback__label" for="middlename">Отчество:</label>
-              <input class="form-feedback__input" type="text" id="middlename" name="middlename"
+              <input class="form-feedback__input" type="text hidden" id="middlename" name="middlename"
                 placeholder="Ну и отчество тоже">
             </li>
           </ul>
@@ -174,8 +171,9 @@
             <span class="form-feedback__legend-text">Опишите свои эмоции</span>
           </legend>
 
-          <textarea class="form-feedback__textarea form-feedback__input" name="message"
+          <textarea id="textarea" class="form-feedback__textarea form-feedback__input" name="message"
             placeholder="Можно прям в красках, не стесняясь в выражениях"></textarea>
+          <label class="visually-hidden" for="textarea">Текстарея</label>
         </fieldset>
       </div>
 
@@ -236,6 +234,7 @@
   </footer>
 
   <section class="popup  popup--error">
+    <!-- Указать popup--show для показа модального окна  -->
     <div class="popup__top">
       <h3 class="popup__title">Что-то пошло не так!</h3>
       <p class="popup__text  popup__text--error">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить
@@ -246,6 +245,7 @@
     </div>
   </section>
   <section class="popup  popup--success">
+    <!-- Указать popup--show для показа модального окна  -->
     <div class="popup__top">
       <h3 class="popup__title">Ваша заявка отправлена</h3>
       <p class="popup__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим
