--- a/source/form.html
+++ b/source/form.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pink: Конкурс</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300">
+  <link rel="preload" href="fonts/opensans.woff2" as="font"> <!-- Так же @font-face в less/fonts.less-->
+  <link rel="preload" href="fonts/opensansbold.woff2" as="font">
+  <link rel="preload" href="fonts/opensanslight.woff2" as="font">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -16,14 +18,17 @@
       <nav class="page-header__main-nav main-nav">
         <h2 class="visually-hidden">Навигация</h2>
         <div class="main-nav__logo-wrapper">
-          <a class="header-logo" href="index.html" aria-label="Логотип Pink">
-            <svg class="header-logo__image" width="74" height="23">
-              <use class="header-logo__image--mobile" xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
-              <use class="header-logo__image--tablet" xlink:href="img/sprite.svg#logo-pink-white-tablet"></use>
-              <use class="header-logo__image--desktop" xlink:href="img/sprite.svg#logo-pink-white-desktop"></use>
+          <a class="header-logo" href="index.html" aria-label="Логотип сайта Pink">
+            <svg class="header-logo__image header-logo__image--mobile" width="74" height="23">
+              <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
+            </svg>
+            <svg class="header-logo__image header-logo__image--tablet" width="146" height="40">
+              <use xlink:href="img/sprite.svg#logo-pink-white-tablet"></use>
+            </svg>
+            <svg class="header-logo__image header-logo__image--desktop" width="146" height="40">
+              <use xlink:href="img/sprite.svg#logo-pink-white-desktop"></use>
             </svg>
           </a>
-
 
           <button class="main-nav__toggle" type="button" id="toggle-button" aria-label="Меню"></button>
         </div>
@@ -62,17 +67,17 @@
           <ul class="form-feedback__list">
             <li class="form-feedback__name-item">
               <label class="form-feedback__label" for="lastname">Фамилия:</label>
-              <input class="form-feedback__input" type="text hidden" id="lastname" name="lastname"
+              <input class="form-feedback__input" type="text" id="lastname" name="lastname"
                 placeholder="Укажите фамилию *" required>
             </li>
             <li class="form-feedback__name-item">
               <label class="form-feedback__label" for="firstname">Имя:</label>
-              <input class="form-feedback__input" type="text hidden" id="firstname" name="firstname"
+              <input class="form-feedback__input" type="text" id="firstname" name="firstname"
                 placeholder="Введите ваше имя *" required>
             </li>
             <li class="form-feedback__name-item">
               <label class="form-feedback__label" for="middlename">Отчество:</label>
-              <input class="form-feedback__input" type="text hidden" id="middlename" name="middlename"
+              <input class="form-feedback__input" type="text" id="middlename" name="middlename"
                 placeholder="Ну и отчество тоже">
             </li>
           </ul>
