--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pink: Главная</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300">
+  <link rel="preload" href="fonts/opensans.woff2" as="font"> <!-- Так же @font-face в less/fonts.less-->
+  <link rel="preload" href="fonts/opensansbold.woff2" as="font">
+  <link rel="preload" href="fonts/opensanslight.woff2" as="font">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
@@ -16,11 +18,15 @@
       <nav class="page-header__main-nav main-nav">
         <h2 class="visually-hidden">Навигация</h2>
         <div class="main-nav__logo-wrapper">
-          <a class="header-logo" href="index.html" aria-label="Логотип Pink">
-            <svg class="header-logo__image" width="74" height="23">
-              <use class="header-logo__image--mobile" xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
-              <use class="header-logo__image--tablet" xlink:href="img/sprite.svg#logo-pink-white-tablet"></use>
-              <use class="header-logo__image--desktop" xlink:href="img/sprite.svg#logo-pink-white-desktop"></use>
+          <a class="header-logo" href="index.html" aria-label="Логотип сайта Pink">
+            <svg class="header-logo__image header-logo__image--mobile" width="74" height="23">
+              <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
+            </svg>
+            <svg class="header-logo__image header-logo__image--tablet" width="146" height="40">
+              <use xlink:href="img/sprite.svg#logo-pink-white-tablet"></use>
+            </svg>
+            <svg class="header-logo__image header-logo__image--desktop" width="146" height="40">
+              <use xlink:href="img/sprite.svg#logo-pink-white-desktop"></use>
             </svg>
           </a>
 
@@ -309,7 +315,7 @@
       <picture>
         <source media="(min-width: 960px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg 2x">
         <source media="(min-width: 660px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg 2x">
-        <img class="contacts__map-img" src="img/bg-map-mobile@1x.jpg" srcset="img/bg-map-mobile@2x.jpg" alt="Карта">
+        <img class="map-image" src="img/bg-map-mobile@1x.jpg" srcset="img/bg-map-mobile@2x.jpg 2x" alt="карта">
       </picture>
     </div>
   </main>
