--- a/source/index.html
+++ b/source/index.html
@@ -13,27 +13,31 @@
 
 <body class="page">
   <h1 class="visually-hidden">Главная страница</h1>
-  <header class="page-header">
-    <div class="page-header__nav-wrapper">
-      <nav class="page-header__main-nav main-nav">
+  <header class="page-header page-header--no-js">
+    <nav class="main-nav main-nav">
+      <div class="main-nav__nav-wrapper">
         <h2 class="visually-hidden">Навигация</h2>
         <div class="main-nav__logo-wrapper">
-          <a class="header-logo" href="index.html" aria-label="Логотип сайта Pink">
-            <svg class="header-logo__image header-logo__image--mobile" width="74" height="23">
+          <a class="main-nav-logo" href="index.html" aria-label="Логотип сайта Pink">
+            <svg class="main-nav__image main-nav__image--mobile" width="74" height="23">
               <use xlink:href="img/sprite.svg#logo-pink-white-mobile"></use>
             </svg>
-            <svg class="header-logo__image header-logo__image--tablet" width="146" height="40">
+            <svg class="main-nav__image main-nav__image--tablet" width="146" height="40">
               <use xlink:href="img/sprite.svg#logo-pink-white-tablet"></use>
             </svg>
-            <svg class="header-logo__image header-logo__image--desktop" width="146" height="40">
+            <svg class="main-nav__image main-nav__image--desktop" width="146" height="40">
               <use xlink:href="img/sprite.svg#logo-pink-white-desktop"></use>
             </svg>
           </a>
 
-          <button class="main-nav__toggle" type="button" id="toggle-button" aria-label="Меню"></button>
+          <button class="main-nav__toggle" type="button" id="toggle-button" aria-label="Меню">
+            <svg class="main-nav__cross-logo" width="24" height="24" focusable="false">
+              <use xlink:href="img/sprite.svg#icon-cross"></use>
+            </svg>
+          </button>
         </div>
 
-        <ul class="main-menu">
+        <ul class="main-menu main-nav__menu">
           <li class="main-menu__item">
             <a class="main-menu__link">Главная</a>
           </li>
@@ -47,14 +51,16 @@
             <a class="main-menu__link" href="https://htmlacademy.ru">HTML Academy</a>
           </li>
         </ul>
-      </nav>
-    </div>
+      </div>
+    </nav>
 
     <h2 class="visually-hidden">Приложение Pink</h2>
 
+    <p class="page-header__title-mob">Взгляните на жизнь иначе!</p>
     <div class="page-header__store store">
       <div class="store__content">
         <p class="store__title">Взгляните на жизнь иначе!</p>
+
 
         <a class="store__button button button--rounded" href="https://www.apple.com/ru/ios/app-store/">Скачать
           приложение</a>
@@ -365,6 +371,8 @@
       </div>
     </div>
   </footer>
+
+  <script src="./js/script.min.js"></script>
 
 </body>
 
