--- a/source/form.html
+++ b/source/form.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="page">
-  <h1 class="visually-hidden">Главная страница</h1>
+  <h1 class="visually-hidden">Страница конкурса</h1>
   <header class="page-header page-header--no-js">
     <nav class="main-nav main-nav">
       <div class="main-nav__nav-wrapper">
